--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,16 @@
     
     <!-- This tag outputs SEO meta+structured data and other important settings -->
     {% include head.html %}
+    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150677587-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-150677587-1');
+</script>
 
 </head>
 <body class="{% if paginator.page > 1 %}paged archive-template{% elsif page.class %}{{ page.class }}{% else %}home-template{% endif %}">
