--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -108,6 +108,40 @@ into the {body} of the default.hbs template -->
                 </section>
             {% endif %}
 
+            <!-- 来必力City版安装代码 -->
+<section class="post-full-comments">
+<div id="lv-container" data-id="city" data-uid="MTAyMC80NzIwMS8yMzcwMQ==">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+</div>
+<!-- City版安装代码已完成 -->
+</section>
+
+<div id="vcomments"></div>
+<script>
+    new Valine({
+    el: '#vcomments' ,
+    appId: 'n083pU3fnDidO3AB2QBb3BGj-gzGzoHsz',
+    appKey: 'Djdhxa6cIPOzC0EieWiLtNXC',
+    notify:false, 
+    verify:false, 
+    avatar:'wavatar', 
+    placeholder: 'just go go' 
+});
+</script>
+
         </article>
 
     </div>
