--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,5 +2,5 @@
     <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">主页</a></li>
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">关于</a></li>
     <li class="nav-getting-started" role="menuitem"><a href="{{site.baseurl}}tag/getting-started/">开始</a></li>
-    <li class="nav-try-ghost" role="menuitem"><a href="https://ghost.org">编辑器</a></li>
+    <li class="nav-try-ghost" role="menuitem"><a href="https://www.typora.io/">编辑器</a></li>
 </ul>
