[Subscribe form change]

--- a/_includes/subscribe-form.html
+++ b/_includes/subscribe-form.html
@@ -1,9 +1,12 @@
-<form method="post" action="/subscribe/" class="">
-    <input class="confirm" type="hidden" name="confirm"  /><input class="location" type="hidden" name="location"  /><input class="referrer" type="hidden" name="referrer"  />
-
-    <div class="form-group">
-        <input class="subscribe-email" type="email" name="email"  placeholder="youremail@example.com" />
-    </div>
-    <button class="" type="submit" {% unless site.subscribe %}disabled{% endunless %}><span>Subscribe</span></button>
-    <script type="text/javascript">(function(g,h,o,s,t){h[o]('.location')[s]=h[o]('.location')[s] || g.location.href;h[o]('.referrer')[s]=h[o]('.referrer')[s] || h.referrer;})(window,document,'querySelector','value');</script>
+<!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<form action="https://163.us5.list-manage.com/subscribe/post?u=b726c9cc69f143eebc3359c41&amp;id=d531df05d7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<label for="mce-EMAIL" hidden>Subscribe</label>
+	<div class="form-group">
+	<input type="email" value="" name="EMAIL" class="subscribe-email" id="mce-EMAIL" placeholder="email address" required>
+	</div>
+	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b726c9cc69f143eebc3359c41_d531df05d7" tabindex="-1" value=""></div>
+    <div class=""><button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"><span>Subscribe</span></button></div>
 </form>
+<!--End mc_embed_signup-->
