[bugfix] fix abandon code in form.

--- a/_includes/subscribe-form.html
+++ b/_includes/subscribe-form.html
@@ -1,5 +1,4 @@
 <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 <form action="https://163.us5.list-manage.com/subscribe/post?u=b726c9cc69f143eebc3359c41&amp;id=d531df05d7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	<label for="mce-EMAIL" hidden>Subscribe</label>
 	<div class="form-group">
@@ -7,6 +6,6 @@
 	</div>
 	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b726c9cc69f143eebc3359c41_d531df05d7" tabindex="-1" value=""></div>
-    <div class=""><button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"><span>Subscribe</span></button></div>
+    <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"><span>Subscribe</span></button>
 </form>
 <!--End mc_embed_signup-->
