--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,8 @@ layout: default
 current: post
 class: post-template
 disqus: false
+valine: true
+livere: false
 ---
 
 <!-- default -->
@@ -26,16 +28,17 @@ into the {body} of the default.hbs template -->
 
             <header class="post-full-header">
                 <section class="post-full-meta">
-                    <time class="post-full-meta-date" datetime="{{ page.date | date:'%e %B %Y' }}">{{ page.date | date:'%e %B %Y' }}</time>
+                    <time class="post-full-meta-date"
+                        datetime="{{ page.date | date:'%e %B %Y' }}">{{ page.date | date:'%e %B %Y' }}</time>
                     {% if page.tags.size > 0 %}
-                        <span class="date-divider">/</span>
-                        {% for tag in page.tags %}
-                            {% if forloop.index == page.tags.size %}
-                               <a href='{{ site.baseurl }}tag/{{ tag | downcase | replace: ' ', '-' }}/'>{{ tag | upcase }}</a>
-                            {% else %}
-                               <a href='{{ site.baseurl }}tag/{{ tag | downcase | replace: ' ', '-' }}/'>{{ tag | upcase }}</a>,
-                            {% endif %}
-                        {% endfor %}
+                    <span class="date-divider">/</span>
+                    {% for tag in page.tags %}
+                    {% if forloop.index == page.tags.size %}
+                    <a href='{{ site.baseurl }}tag/{{ tag | downcase | replace: ' ', '-' }}/'>{{ tag | upcase }}</a>
+                    {% else %}
+                    <a href='{{ site.baseurl }}tag/{{ tag | downcase | replace: ' ', '-' }}/'>{{ tag | upcase }}</a>,
+                    {% endif %}
+                    {% endfor %}
                     {% endif %}
                 </section>
                 <h1 class="post-full-title">{{ page.title }}</h1>
@@ -54,35 +57,37 @@ into the {body} of the default.hbs template -->
 
             <!-- Email subscribe form at the bottom of the page -->
             {% if site.subscribers %}
-                <section class="subscribe-form">
-                    <h3 class="subscribe-form-title">Subscribe to {{ site.title }}</h3>
-                    <p>Get the latest posts delivered right to your inbox</p>
-                    {% include subscribe-form.html placeholder="youremail@example.com" %}
-                </section>
+            <section class="subscribe-form">
+                <h3 class="subscribe-form-title">Subscribe to {{ site.title }}</h3>
+                <p>Get the latest posts delivered right to your inbox</p>
+                {% include subscribe-form.html placeholder="youremail@example.com" %}
+            </section>
             {% endif %}
 
             <footer class="post-full-footer">
                 <!-- Everything inside the #author tags pulls data from the author -->
                 <!-- #author-->
                 {% for author in site.data.authors %}
-                    {% if author[1].username == page.author %}
-                        <section class="author-card">
-                            {% if author[1].picture %}
-                                <img class="author-profile-image" src="{{ site.baseurl }}{{ author[1].picture }}" alt="{{ page.author }}" />
-                            {% endif %}
-                            <section class="author-card-content">
-                                <h4 class="author-card-name"><a href="{{ site.baseurl }}author/{{ page.author }}">{{ author[1].name }}</a></h4>
-                                {% if author[1].bio %}
-                                    <p>{{ author[1].bio }}</p>
-                                {% else %}
-                                    <p>Read <a href="{{ site.baseurl }}author/{{ page.author }}">more posts</a> by this author.</p>
-                                {% endif %}
-                            </section>
-                        </section>
-                        <div class="post-full-footer-right">
-                            <a class="author-card-button" href="{{ site.baseurl }}author/{{ page.author }}">Read More</a>
-                        </div>
+                {% if author[1].username == page.author %}
+                <section class="author-card">
+                    {% if author[1].picture %}
+                    <img class="author-profile-image" src="{{ site.baseurl }}{{ author[1].picture }}"
+                        alt="{{ page.author }}" />
                     {% endif %}
+                    <section class="author-card-content">
+                        <h4 class="author-card-name"><a
+                                href="{{ site.baseurl }}author/{{ page.author }}">{{ author[1].name }}</a></h4>
+                        {% if author[1].bio %}
+                        <p>{{ author[1].bio }}</p>
+                        {% else %}
+                        <p>Read <a href="{{ site.baseurl }}author/{{ page.author }}">more posts</a> by this author.</p>
+                        {% endif %}
+                    </section>
+                </section>
+                <div class="post-full-footer-right">
+                    <a class="author-card-button" href="{{ site.baseurl }}author/{{ page.author }}">Read More</a>
+                </div>
+                {% endif %}
                 {% endfor %}
                 <!-- /author  -->
             </footer>
@@ -91,57 +96,64 @@ into the {body} of the default.hbs template -->
             The only thing you need to change is "test-apkdzgmqhj" - which
             should be replaced with your own Disqus site-id. -->
             {% if site.disqus or page.disqus %}
-                <section class="post-full-comments">
-                    <div id="disqus_thread"></div>
-                    <script>
-                        var disqus_config = function () {
-                            this.page.url = '{{ site.url }}{{ site.baseurl }}';
-                            this.page.identifier = '{{ site.title }}';
-                        };
-                        (function() {
-                            var d = document, s = d.createElement('script');
-                            s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
-                            s.setAttribute('data-timestamp', +new Date());
-                            (d.head || d.body).appendChild(s);
-                        })();
-                    </script>
-                </section>
+            <section class="post-full-comments">
+                <div id="disqus_thread"></div>
+                <script>
+                    var disqus_config = function () {
+                        this.page.url = '{{ site.url }}{{ site.baseurl }}';
+                        this.page.identifier = '{{ site.title }}';
+                    };
+                    (function () {
+                        var d = document, s = d.createElement('script');
+                        s.src = 'https://{{ site.disqus_shortname }}.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+            </section>
             {% endif %}
 
+            {% if site.livere or page.livere %}
             <!-- 来必力City版安装代码 -->
-<section class="post-full-comments">
-<div id="lv-container" data-id="city" data-uid="MTAyMC80NzIwMS8yMzcwMQ==">
-	<script type="text/javascript">
-   (function(d, s) {
-       var j, e = d.getElementsByTagName(s)[0];
+            <section class="post-full-comments">
+                <div id="lv-container" data-id="city" data-uid="MTAyMC80NzIwMS8yMzcwMQ==">
+                    <script type="text/javascript">
+                        (function (d, s) {
+                            var j, e = d.getElementsByTagName(s)[0];
 
-       if (typeof LivereTower === 'function') { return; }
+                            if (typeof LivereTower === 'function') { return; }
 
-       j = d.createElement(s);
-       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-       j.async = true;
+                            j = d.createElement(s);
+                            j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+                            j.async = true;
 
-       e.parentNode.insertBefore(j, e);
-   })(document, 'script');
-	</script>
-<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
-</div>
-<!-- City版安装代码已完成 -->
-</section>
+                            e.parentNode.insertBefore(j, e);
+                        })(document, 'script');
+                    </script>
+                    <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+                </div>
+                <!-- City版安装代码已完成 -->
+            </section>
+            {% endif %}
 
-<div id="vcomments"></div>
-<script>
-    new Valine({
-    el: '#vcomments' ,
-    appId: 'n083pU3fnDidO3AB2QBb3BGj-gzGzoHsz',
-    appKey: 'Djdhxa6cIPOzC0EieWiLtNXC',
-    notify:false, 
-    verify:false, 
-    avatar:'wavatar', 
-    placeholder: 'just go go' 
-});
-</script>
-
+            {% if site.valine or page.valine %}
+            <div id="vcomments"></div>
+            <script>
+                new Valine({
+                    el: '#vcomments',
+                    av: AV,
+                    appId: '{{ site.appId }}',
+                    appKey: '{{ site.appKey }}',
+                    notify: this.notify,
+                    verify: this.verify,
+                    recordIP: this.recordIP,
+                    avatar: '{{ site.avatar }}',
+                    placeholder: '{{ site.placeholder }}',
+                    emoticon_url: '{{ site.baseurl }}alu',
+                    emoticon_list: ["狂汗.png", "不说话.png", "汗.png", "坐等.png", "献花.png", "不高兴.png", "中刀.png", "害羞.png", "皱眉.png", "小眼睛.png", "暗地观察.png"]
+                });
+            </script>
+            {% endif %}
         </article>
 
     </div>
@@ -152,69 +164,66 @@ into the {body} of the default.hbs template -->
     <div class="inner">
         <div class="read-next-feed">
             {% if page.tags.size > 0 %}
-                {% assign primary = page.tags | first %}
-                {% assign related_posts = 0 %}
-                {% for post in site.posts %}
-                  {% if post.tags.size > 0 %}
-                      {% if post.tags contains primary %}
-                        {% assign related_posts = related_posts | plus: 1 %}
-                      {% endif %}
-                  {% endif %}
-                {% endfor %}
-                {% if related_posts > 1 %}
-                    <article class="read-next-card"
-                        {% if site.cover %}
-                            style="background-image: url({{ site.baseurl }}{{ site.cover }})"
-                        {% else %}
-                            {% if page.cover %}
-                                style="background-image: url(url({{ site.baseurl }}{{ page.cover }})"{% endif %}
+            {% assign primary = page.tags | first %}
+            {% assign related_posts = 0 %}
+            {% for post in site.posts %}
+            {% if post.tags.size > 0 %}
+            {% if post.tags contains primary %}
+            {% assign related_posts = related_posts | plus: 1 %}
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+            {% if related_posts > 1 %}
+            <article class="read-next-card" {% if site.cover %}
+                style="background-image: url({{ site.baseurl }}{{ site.cover }})" {% else %} {% if page.cover %}
+                style="background-image: url(url({{ site.baseurl }}{{ page.cover }})" {% endif %} {% endif %}>
+                <header class="read-next-card-header">
+                    <small class="read-next-card-header-sitetitle">&mdash; {{ site.title }} &mdash;</small>
+                    {% if primary %}
+                    <h3 class="read-next-card-header-title"><a
+                            href="{{ site.baseurl }}tag/{{ primary | downcase | replace: ' ', '-' }}/">{{ primary | capitalize }}</a>
+                    </h3>
+                    {% endif %}
+                </header>
+                <div class="read-next-divider">{% include infinity.html %}</div>
+                <div class="read-next-card-content">
+                    <ul>
+                        {% assign count = 0 %}
+                        {% for post in site.posts %}
+                        {% if post.tags contains primary %}
+                        {% if post.title != page.title %}
+                        {% assign count = count | plus: 1 %}
+                        {% if count <= 3 %}
+                        <li><a href="{{ site.baseurl }}{{ post.url | remove_first: '/' }}">{{ post.title }}</a></li>
                         {% endif %}
-                    >
-                        <header class="read-next-card-header">
-                            <small class="read-next-card-header-sitetitle">&mdash; {{ site.title }} &mdash;</small>
-                            {% if primary %}
-                                <h3 class="read-next-card-header-title"><a href="{{ site.baseurl }}tag/{{ primary | downcase | replace: ' ', '-' }}/">{{ primary | capitalize }}</a></h3>
-                            {% endif %}
-                        </header>
-                        <div class="read-next-divider">{% include infinity.html %}</div>
-                        <div class="read-next-card-content">
-                            <ul>
-                                {% assign count = 0 %}
-                                {% for post in site.posts %}
-                                  {% if post.tags contains primary %}
-                                    {% if post.title != page.title %}
-                                        {% assign count = count | plus: 1 %}
-                                        {% if count <= 3 %}
-                                            <li><a href="{{ site.baseurl }}{{ post.url | remove_first: '/' }}">{{ post.title }}</a></li>
-                                        {% endif %}
-                                    {% endif %}
-                                  {% endif %}
-                                {% endfor %}
-                            </ul>
-                        </div>
-                        <footer class="read-next-card-footer">
-                            <a href="{{ site.baseurl }}tag/{{ primary | downcase | replace: ' ', '-' }}/">
-                                {% if related_posts > 1 %}
-                                    See all {{ related_posts | minus: 1 }} posts  →
-                                {% elsif related_posts == 1 %}
-                                    {{ related_posts }} post  →
-                                {% else %}
-                                    No posts.
-                                {% endif %}
-                            </a>
-                        </footer>
-                    </article>
-                {% endif %}
+                        {% endif %}
+                        {% endif %}
+                        {% endfor %}
+                    </ul>
+                </div>
+                <footer class="read-next-card-footer">
+                    <a href="{{ site.baseurl }}tag/{{ primary | downcase | replace: ' ', '-' }}/">
+                        {% if related_posts > 1 %}
+                        See all {{ related_posts | minus: 1 }} posts →
+                        {% elsif related_posts == 1 %}
+                        {{ related_posts }} post →
+                        {% else %}
+                        No posts.
+                        {% endif %}
+                    </a>
+                </footer>
+            </article>
+            {% endif %}
             {% endif %}
 
             <!-- If there's a next post, display it using the same markup included from - partials/post-card.hbs -->
             {% if page.next %}
-                {% include post-card-next.html %}
+            {% include post-card-next.html %}
             {% endif %}
 
             <!-- If there's a previous post, display it using the same markup included from - partials/post-card.hbs -->
             {% if page.previous %}
-                {% include post-card-previous.html %}
+            {% include post-card-previous.html %}
             {% endif %}
 
         </div>
